decoders: fix draining

https://bugzilla.gnome.org/show_bug.cgi?id=796900